add firstName, lastName to User; move mapstruct config to Java
mapstruct only exposes a few properties to be configured at build time, so for consistency we'll keep all configuration together in one spot.
