# base-backend/src/main/java/com/samkruglov/base/api/view/GetUserDto.java
@@ -5,4 +5,6 @@ import lombok.Value;
 @Value
 public class GetUserDto {
     String email;
+    String firstName;
+    String lastName;
 }
